# glacier-gallery

./: .gitignore  CMakeLists.txt  glacier-gallery-openfile.desktop  glacier-gallery.desktop  glacier-gallery.pro  org.nemomobile.gallery.service  org.nemomobile.gallery.xml
qml/: ImageContainer.qml  ImagePage.qml  ImageSlideshowPage.qml  MainPage.qml  SingleImagePage.qml  VideoPlayer.qml  ZoomController.qml  glacier-gallery.qml  main.qml
qml/api/: GalleryDelegate.qml  GalleryView.qml
rpm/: glacier-gallery.spec
src/: CMakeLists.txt  gallery.cpp  gallery.h  main.cpp
src/editorplugin/: CMakeLists.txt  editableimage.cpp  editableimage.h  plugin.cpp  qmldir  roratewidget.cpp  roratewidget.h
src/qml/: ImageContainer.qml  ImagePage.qml  MainPage.qml  SingleImagePage.qml  VideoPlayer.qml  glacier-gallery.qml  glacier-gallery.qrc
src/qml/api/: GalleryDelegate.qml  GalleryModel.qml  GalleryView.qml
src/qml/components/: DownListView.qml  ImageContainer.qml  VideoPlayer.qml  ZoomController.qml
src/qml/pages/: ImageEditorPage.qml  ImageInfoPage.qml  ImagePage.qml  ImageSlideshowPage.qml  MainPage.qml  SingleImagePage.qml
translations/: glacier-gallery.ts  glacier-gallery_cs.ts  glacier-gallery_de.ts  glacier-gallery_en.ts  glacier-gallery_es.ts  glacier-gallery_fi.ts  glacier-gallery_nl.ts  glacier-gallery_pl.ts  glacier-gallery_ru.ts  glacier-gallery_uk.ts
